class Rectangle extends Shape {
    @Override
    public String draw() {
        return "Drawing a Rectangle";
    }
}